[gd_scene load_steps=6 format=3 uid="uid://rbvlih3jaros"]

[ext_resource type="Script" uid="uid://4237u1hkupqd" path="res://UI/ScoreTracker/score_tracker.gd" id="1_uiuky"]
[ext_resource type="AudioStream" uid="uid://4ep6y1um4sl" path="res://UI/ScoreTracker/sfx/59_Special_move_01.wav" id="2_xr5ko"]
[ext_resource type="AudioStream" uid="uid://d2ls2vnrtnkoe" path="res://UI/ScoreTracker/sfx/45_bow_shot_02.wav" id="3_l7382"]

[sub_resource type="SystemFont" id="SystemFont_ijk5u"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_ttbmf"]
font = SubResource("SystemFont_ijk5u")

[node name="ScoreTracker" type="Node"]
script = ExtResource("1_uiuky")

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ScoreArea"]

[node name="LoopPolygon" type="Polygon2D" parent="ScoreArea"]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_ttbmf")

[node name="LoopSuccessSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_xr5ko")

[node name="LoopFailureSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_l7382")
